# src/controllers/clientController.ts
@@ -33,7 +33,7 @@ export class clientController extends Controller {
   ): Promise<string> {
     try {
       const { name, email, phone_number } = requestBody;
-      await new ClientService().createNewClient(name, email, phone_number);
+      await new ClientService().createNewClient(name, email, phone_number || null);
       this.setStatus(201);
       return "Data on Client entity created successfully"
     } catch (error) {
