# src/models/clientModel.ts
@@ -1,5 +1,6 @@
 export interface Client {
+  client_id: number,
   name: string, 
   email: string, 
-  phone_number: string;
+  phone_number?: string | null;
 }
